--- a/home.html
+++ b/home.html
@@ -9,27 +9,27 @@
 <body>
     <header>
         <!--Header-->
-        <h1>UNIVA - ISC - PII</h1>
+        <h1><a href="/index.html">Header</a></h1>
     </header>
+    <nav>
+        <!--Menú-->
+        <ul>
+            <li>Home</li>
+            <li>About us</li>
+            <li>Products</li>
+            <li>Services</li>
+            <li>Contact</li>
+        </ul>
+    </nav>
     <article>
         <section>
             <!--Lleno-->
-            <img src="image/logouniva.png" alt="Logo UNIVA">
-            <h2>Name: UNIVA</h2>
-            <h3>Major: Computer Systems Engineering</h3>
+            <p>This is a paragraph</p>
         </section>
         <article>
             <section>
-                <ul>
-                    <li>Subject: IEP</li>
-                    <li>Teacher: Luis Guerra</li>
-                    <li>Student: Emanuel Camarena</li>
-                    <li>Period: 2020-3</li>
-                </ul>
+                <p>This is another paragraph</p>
             </section>
-            <article>
-                <a href="/home.html">Home</a>
-            </article>
         </article>
     </article>
     <footer>
