--- a/home.html
+++ b/home.html
@@ -22,15 +22,19 @@
         </ul>
     </nav>
     <article>
-        <section>
+        <section class="text-one">
+            <h2>Title 1</h2>
             <!--Lleno-->
-            <p>This is a paragraph</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint nam omnis modi soluta atque sequi ipsam, quaerat dignissimos corrupti ad, et laboriosam cupiditate sunt facilis? Error qui esse perferendis magnam. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error molestiae, dolore doloremque voluptatem laudantium distinctio nihil quos, vero eveniet beatae officia qui accusantium. Nesciunt vitae saepe repellendus quidem repellat eum.</p>
         </section>
-        <article>
-            <section>
-                <p>This is another paragraph</p>
-            </section>
-        </article>
+        <section id="id-example-one">
+            <h2>Title 2</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint nam omnis modi soluta atque sequi ipsam, quaerat dignissimos corrupti ad, et laboriosam cupiditate sunt facilis? Error qui esse perferendis magnam. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error molestiae, dolore doloremque voluptatem laudantium distinctio nihil quos, vero eveniet beatae officia qui accusantium. Nesciunt vitae saepe repellendus quidem repellat eum.</p>
+        </section>
+        <section class="text-one">
+            <h2>Title 2</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint nam omnis modi soluta atque sequi ipsam, quaerat dignissimos corrupti ad, et laboriosam cupiditate sunt facilis? Error qui esse perferendis magnam. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error molestiae, dolore doloremque voluptatem laudantium distinctio nihil quos, vero eveniet beatae officia qui accusantium. Nesciunt vitae saepe repellendus quidem repellat eum.</p>
+        </section>
     </article>
     <footer>
         <!--Todo lo de abajo como copyright-->
