--- a/ProyectoExamen1/index.html
+++ b/ProyectoExamen1/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV - Emanuel Camarena</title>
+    <link rel="stylesheet" href="styles/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand+SC&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Emanuel Camarena</h1>
-    <h2>Ing. en Sistemas Computacionales</h2>
+    <section id="header">
+        <header>
+            <h1>-------------------------------------------------------------------------------</h1>
+            <h1>Emanuel Camarena</h1>
+            <h2>Ing. en Sistemas Computacionales</h2>
+            <h1>-------------------------------------------------------------------------------</h1>
+            <h2></h2>
+        </header>
+    </section>
 </body>
 </html>
