--- a/ProyectoExamen1/index.html
+++ b/ProyectoExamen1/index.html
@@ -8,14 +8,39 @@
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand+SC&display=swap" rel="stylesheet">
 </head>
 <body>
-    <section id="header">
-        <header>
-            <h1>-------------------------------------------------------------------------------</h1>
-            <h1>Emanuel Camarena</h1>
-            <h2>Ing. en Sistemas Computacionales</h2>
-            <h1>-------------------------------------------------------------------------------</h1>
-            <h2></h2>
-        </header>
-    </section>
+    <header>
+        <h1>-------------------------------------------------------------------------------</h1>
+        <h1>Emanuel Camarena</h1>
+        <h2>Ing. en Sistemas Computacionales</h2>
+        <h1>-------------------------------------------------------------------------------</h1>
+        <h2></h2>
+    </header>
+    <article>
+        <section class="right">
+            <section>
+                <h1>TEST</h1>
+                <p>lorem</p>
+            </section>
+            <section>
+                <h1>TEST</h1>
+                <p>lorem</p>
+            </section>
+        </section>
+    </article>
+    <article>
+        <section class="left">
+            <section>
+                <h1>TEST</h1>
+                <p>lorem</p>
+            </section>
+            <section>
+                <h1>TEST</h1>
+                <p>lorem</p>
+            </section>
+        </section>
+    </article>
+    <footer>
+        <p>Copyright &copy; 2020 - Emanuel Camarena</p>
+    </footer>
 </body>
 </html>
