--- a/ProyectoExamen1/index.html
+++ b/ProyectoExamen1/index.html
@@ -6,6 +6,7 @@
     <title>CV - Emanuel Camarena</title>
     <link rel="stylesheet" href="styles/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand+SC&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -18,11 +19,12 @@
     <article>
         <section class="right">
             <section>
-                <h1>TEST</h1>
-                <p>lorem</p>
+                <h2>Contacto</h2>
+                <p><i class="large material-icons">mail</i>  test@correo.com.mx</p>
+                <p><i class="large material-icons">contact_phone</i>  555-555-5555</p>
             </section>
             <section>
-                <h1>TEST</h1>
+                <h2>TEST</h2>
                 <p>lorem</p>
             </section>
         </section>
@@ -30,17 +32,18 @@
     <article>
         <section class="left">
             <section>
-                <h1>TEST</h1>
-                <p>lorem</p>
+                <h2>Contacto</h2>
+                <p><i class="large material-icons">mail</i>  test@correo.com.mx</p>
+                <p><i class="large material-icons">contact_phone</i>  555-555-5555</p>
             </section>
             <section>
-                <h1>TEST</h1>
+                <h2>TEST</h2>
                 <p>lorem</p>
             </section>
         </section>
     </article>
     <footer>
-        <p>Copyright &copy; 2020 - Emanuel Camarena</p>
+        <p><i class="large material-icons">copyright</i>     2020 - Emanuel Camarena</p>
     </footer>
 </body>
 </html>
