Left side completed

--- a/ProyectoExamen1/index.html
+++ b/ProyectoExamen1/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand+SC&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/cec7f5f236.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -22,10 +23,73 @@
                 <h2>Contacto</h2>
                 <p><i class="large material-icons">mail</i>  test@correo.com.mx</p>
                 <p><i class="large material-icons">contact_phone</i>  555-555-5555</p>
+                <p><i class="fab fa-twitter"></i> @DevCamarena</p></p>
             </section>
             <section>
-                <h2>TEST</h2>
-                <p>lorem</p>
+                <h2>Escolaridad</h2>
+                <ul>
+                    <li>
+                        <h4>UNIVA (2014 - 2016) - Preparatoria General en Administración</h4>
+                        <h5>Guadajalara, Jalisco México</h5>
+                    </li>
+                    <li>
+                        <h4>UVM Sur (2016 - 2017) - Preparatoria Técnica en Financiero </h4>
+                        <h5>Guadajalara, Jalisco México</h5>
+                    </li>
+                    <li>
+                        <h4>UNIVA (2017 - 2021) - Ingeniería en Sistemas Computacionales</h4>
+                        <h5>Guadajalara, Jalisco México</h5>
+                    </li>
+                </ul>
+            </section>
+            <section>
+                <h2>Experiencia</h2>
+                <ul>
+                    <li>
+                        <h4>Servicio al Cliente</h4>
+                    </li>
+                    <li>
+                        <h4>Traducción - Inglés - Español</h4>
+                    </li>
+                    <li>
+                        <h4>Project Management</h4>
+                    </li>
+                    <li>
+                        <h4>Trackeo de Tickets</h4>
+                    </li>
+                    <li>
+                        <h4>SCRUM</h4>
+                    </li>
+                    <li>
+                        <h4>ITIL</h4>
+                    </li>
+                    <li>
+                        <h4>Desarrollo</h4>
+                    </li>
+                </ul>
+            </section>
+            <section>
+                <h2>Certificaciones</h2>
+                <ul>
+                    <li>
+                        <h4><i class="fab fa-python"></i> Python Curso Profesional (2020) - Código Facilito</h4>
+                    </li>
+                    <li>
+                        <h4><i class="fab fa-python"></i> Python Curso Profesional (2020) - Platzi</h4>
+                    </li>
+                    <li>
+                        <h4><i class="fab fa-git-square"></i> Git Curso Profesional (2020) - Código Facilito</h4>
+                    </li>
+                    <li>
+                        <h4><i class="fas fa-database"></i> MongoDB Profesional (2020) - Código Facilito</h4>
+                    </li>
+                    <li>
+                        <h4><i class="fab fa-redhat"></i> Linux Redhat Basics (2020) - EDX</h4>
+                    </li>
+                    <li>
+                        <h4><i class="fas fa-volume-up"></i>  Inglés Profesional (2019) - Platzi</h4>
+                    </li>
+                </ul>
             </section>
         </section>
     </article>
@@ -35,6 +99,7 @@
                 <h2>Contacto</h2>
                 <p><i class="large material-icons">mail</i>  test@correo.com.mx</p>
                 <p><i class="large material-icons">contact_phone</i>  555-555-5555</p>
+                <br/>
             </section>
             <section>
                 <h2>TEST</h2>
