--- a/ProyectoExamen1/index.html
+++ b/ProyectoExamen1/index.html
@@ -19,7 +19,7 @@
     </header>
     <article>
         <section class="right">
-            <section>
+            <section class="Contacto">
                 <h2>Contacto</h2>
                 <p><i class="large material-icons">mail</i>  test@correo.com.mx</p>
                 <p><i class="large material-icons">contact_phone</i>  555-555-5555</p>
@@ -96,19 +96,84 @@
     <article>
         <section class="left">
             <section>
-                <h2>Contacto</h2>
-                <p><i class="large material-icons">mail</i>  test@correo.com.mx</p>
-                <p><i class="large material-icons">contact_phone</i>  555-555-5555</p>
-                <br/>
+                <h2>Perfil</h2>
+                <p id="texto">Estudiante de Ingerniería en Sistemas de 23 años con alta experiencia en Servicio al Cliente,
+                              así como gran experiencia en manejo de proyectos y manejo de tickets. También cuento con Certificaciones
+                              tanto como para desarrollo como para el manejo de proyectos a nivel profesional.
+                              Me considero una persona bastante ambiciosa puesto que he aprendido la mayoría de mis conocimientos
+                              de programación por medio de aprendizaje virtual y autónomo.
+                </p>
             </section>
             <section>
-                <h2>TEST</h2>
-                <p>lorem</p>
+                <h2>Experiencia Laboral</h2>
+                <section>
+                    <h2>IBM - Infrastructure Engineer</h2>
+                    <p id="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident libero expedita nam in, voluptate,
+                                quas voluptatum necessitatibus officia totam quasi a veniam at! Distinctio, vero rerum aliquam 
+                                temporibus dolorem odio.
+
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident libero expedita nam in, voluptate,
+                                quas voluptatum necessitatibus officia totam quasi a veniam at! Distinctio, vero rerum aliquam 
+                                temporibus dolorem odio.
+                    </p>
+                </section>
+                <section>
+                    <h2>EPAM - Senior Service Desk Technician</h2>
+                    <p id="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident libero expedita nam in, voluptate,
+                                  quas voluptatum necessitatibus officia totam quasi a veniam at! Distinctio, vero rerum aliquam 
+                                  temporibus dolorem odio.
+
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident libero expedita nam in, voluptate,
+                            quas voluptatum necessitatibus officia totam quasi a veniam at! Distinctio, vero rerum aliquam 
+                            temporibus dolorem odio.
+
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident libero expedita nam in, voluptate,
+                            quas voluptatum necessitatibus officia totam quasi a veniam at! Distinctio, vero rerum aliquam 
+                            temporibus dolorem odio.
+                    </p>
+                </section>
+                <section>
+                    <h2>TATA - Service Desk Consultant</h2>
+                    <p id="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident libero expedita nam in, voluptate,
+                                  quas voluptatum necessitatibus officia totam quasi a veniam at! Distinctio, vero rerum aliquam 
+                                  temporibus dolorem odio.
+
+                                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident libero expedita nam in, voluptate,
+                                  quas voluptatum necessitatibus officia totam quasi a veniam at! Distinctio, vero rerum aliquam 
+                                  temporibus dolorem odio.
+                    </p>
+                </section>
+                <section>
+                    <h2>DELL (NTT DATA) - Service Desk ANALYST</h2>
+                    <p id="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident libero expedita nam in, voluptate,
+                                  quas voluptatum necessitatibus officia totam quasi a veniam at! Distinctio, vero rerum aliquam 
+                                  temporibus dolorem odio.
+
+                                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident libero expedita nam in, voluptate,
+                                  quas voluptatum necessitatibus officia totam quasi a veniam at! Distinctio, vero rerum aliquam 
+                                  temporibus dolorem odio.
+                    </p>
+                </section>
+                <section>
+                    <h2>Teleperformance - Quality Analyst</h2>
+                    <p id="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident libero expedita nam in, voluptate,
+                                  quas voluptatum necessitatibus officia totam quasi a veniam at! Distinctio, vero rerum aliquam 
+                                  temporibus dolorem odio.
+
+                                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident libero expedita nam in, voluptate,
+                                  quas voluptatum necessitatibus officia totam quasi a veniam at! Distinctio, vero rerum aliquam 
+                                  temporibus dolorem odio.
+                    </p>
+                </section>
             </section>
         </section>
     </article>
-    <footer>
-        <p><i class="large material-icons">copyright</i>     2020 - Emanuel Camarena</p>
-    </footer>
+    <article>
+        <section>
+            <footer>
+                <p><i class="large material-icons">copyright</i>     2020 - Emanuel Camarena</p>
+            </footer>
+        </section>
+    </article>
 </body>
 </html>
