--- a/ProyectoFinal/index.html
+++ b/ProyectoFinal/index.html
@@ -29,7 +29,8 @@
                                         <li>Desayuno</li>
                                         <li>... otros</li>
                                         </br>
-									<a href="https://youtu.be/MIo2xpVIGBQ" class="button fit" data-poptrox="youtube,800x400">Ver video</a>
+                                    <a href="https://youtu.be/MIo2xpVIGBQ" class="button style3 fit" data-poptrox="youtube,800x400">Ver video</a>
+                                    <a href="" class="button fit">Ver Disponibilidad</a>
 								</div>
 							</div>
 							<div class="box">
@@ -42,7 +43,8 @@
                                     <li>Desayuno</li>
                                     <li>... otros</li>
                                     </br>
-									<a href="https://youtu.be/cM-YrBoNNA4" class="button style2 fit" data-poptrox="youtube,800x400">Ver video</a>
+                                    <a href="https://youtu.be/cM-YrBoNNA4" class="button style3 fit" data-poptrox="youtube,800x400">Ver video</a>
+                                    <a href="" class="button fit">Ver Disponibilidad</a>
 								</div>
 							</div>
 							<div class="box">
@@ -55,7 +57,8 @@
                                     <li>Desayuno</li>
                                     <li>... otros</li>
                                     <br/>
-									<a href="https://youtu.be/s6zR2T9vn2c" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
+                                    <a href="https://youtu.be/s6zR2T9vn2c" class="button style3 fit" data-poptrox="youtube,800x400">Ver video</a>
+                                    <a href="" class="button fit">Ver Disponibilidad</a>
 								</div>
 							</div>
 							<div class="box">
@@ -68,7 +71,8 @@
                                     <li>Desayuno</li>
                                     <li>... otros</li>
                                     <br/>
-									<a href="https://youtu.be/s6zR2T9vn2c" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
+                                    <a href="https://youtu.be/s6zR2T9vn2c" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
+                                    <a href="" class="button fit">Ver Disponibilidad</a>
 								</div>
 							</div>
 						</div>
